Fix env example

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,4 @@ DATABASE_URL=Database url
 BROKER_URL=Broker url
 DEBUG=True or Flase
 ALLOWED_HOSTS=list of hosts example: <localhost,127.0.01>
+POSTGRES_PASSWORD=password
